--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -1,6 +1,6 @@
 # Project information
 site_name: FAQ
-site_url: https://faq-od-zera-do-ai.github.io/
+site_url: https://github.com/imprv-ai/od-zera-do-ai-faq
 site_author: IMPRV.ai dev team and supporters
 site_description: >-
   Strona zawierająca zbiór tutoriali i instrukcji pozwalających na zaadresowanie problemów technicznych, na które
